core network part1
